compiler/testData/diagnostics/tests/callableReference/bound/functionCallWithoutArguments.kt
fun test() = ("").<!FUNCTION_CALL_EXPECTED!>hashCode<!>::hashCode
